--- a/Katie_Portfolio/css/styles.css
+++ b/Katie_Portfolio/css/styles.css
@@ -10,7 +10,7 @@ body {
     font-size: 16px;
     color: #191A1E;
     box-sizing: border-box;
-    background-color: #fff;
+    background-color: #242731;
     box-sizing: border-box;
     font-family: Helvetica;
 }
@@ -19,8 +19,42 @@ img {
     width: 100%;
 }
 
+* {box-sizing: border-box;}
+
+.img-comp-container {
+  position: relative;
+  width: 100% /*should be the same height as the images*/
+}
+
+.img-comp-img {
+  position: absolute;
+  width: auto;
+  height: auto;
+  overflow: hidden;
+}
+
+.img-comp-img img {
+  display: block;
+  vertical-align: middle;
+  width: auto;
+
+}
+
+.img-comp-slider {
+  position: absolute;
+  z-index: 9;
+  cursor: ew-resize;
+  /*set the appearance of the slider:*/
+  width: 40px;
+  height: 40px;
+  background-color: red;
+  opacity: 0.7;
+  border-radius: 50%;
+}
+
 
 /* Typography */
+
 h1,
 h2,
 h3,
@@ -28,6 +62,7 @@ h4,
 h5,
 h6 {
     margin: 0;
+    color: #F2F4F9;
 }
 
 h1 {
@@ -35,20 +70,32 @@ h1 {
     min-height: 50px;
     display: flex;
     align-items: center;
+    font-family: "Lancelot", serif;
+    font-size: 2rem;
+
 }
 
 h2 {
     font-size: 1.5em;
     font-weight: 700;
     padding-bottom: 30px;
+    font-family: "Lancelot", serif;
 }
 
 h3 {
     font-size: 1.3em;
     font-weight: 600;
     margin-bottom: 20px;
-    color: #969ca0;
+    color: #F2F4F9;
     line-height: 1;
+}
+
+h4 {
+    font-size: 1.1em;
+    font-weight: 600;
+    color: #868683;
+    line-height: 1;
+    text-align: left;
 }
 
 p {
@@ -56,11 +103,12 @@ p {
     opacity: .7;
     font-weight: 300;
     margin-bottom: 15px;
+    color: #F2F4F9;
 }
 
 a {
     text-decoration: none;
-    color: inherit;
+    color: #F2F4F9;
     transition: color .3s, transform .3s;
     font-weight: 400;
 }
@@ -71,12 +119,26 @@ a span {
 }
 
 a:hover {
-    color: #969ca0;
+    color: #746371;
 }
 
 a:hover span {
     transform: translateX(5px);
 }
+
+li{
+    list-style: url('../img/scissors-solid.svg');
+    list-style-position: inside;
+    line-height: 1.5em;
+    color: #F2F4F9;
+
+}
+
+li::marker{
+    font-size: 2rem;
+
+}
+
 
 /* Typography Media Queries */
 @media only screen and (min-width: 800px) {
@@ -105,7 +167,7 @@ a:hover span {
 /* Buttons */
 .primary-btn {
     background-color: #191A1E;
-    color: #fff;
+    color: #F2F4F9;
     border: none;
     padding: 15px 35px;
     font-size: .9em;
@@ -119,7 +181,7 @@ a:hover span {
 
 .primary-btn:hover {
     background-color: transparent;
-    color: #191A1E;
+    color: #F2F4F9;
 }
 
 
@@ -143,7 +205,7 @@ section {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-image: url(../img/splash-temp.jpg);
+    background-image: url(../img/background.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -194,6 +256,16 @@ section {
 
 .round-corners {
     border-radius: 10px;
+}
+
+#katie-chat-photo {
+    margin: 0 auto;
+    padding-top: 50%;
+    background-image: url(../img/katie-chat.jpg);
+    width: 50%;
+    height: auto;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 /* Layout Media Queries */
@@ -261,12 +333,12 @@ header {
     padding: 10px 30px;
     z-index: 998;
     font-size: 1.1em;
-    background-color: rgba(255, 255, 255, 0);
+    background-color: rgba(25, 26, 30, 0);
     transition: all .3s;
 }
 
 .header-solid {
-    background-color: rgba(255, 255, 255, 1);
+    background-color: rgba(25, 26, 30, 1);
 }
 
 /*Mobile Menu & Button Animation*/
@@ -363,7 +435,7 @@ nav {
     z-index: 997;
     height: 100vh;
     width: 100vw;
-    background-color: #F1F3F5;
+    background-color: #F2F4F9;
     transition: right 1s;
     font-size: 2em;
     opacity: 1;
@@ -580,13 +652,24 @@ footer {
     margin-right: 30px;
 }
 
-.twitter-btn {
+.instagram-btn {
     position: relative;
     width: 35px !important;
     height: 35px;
     z-index: 20;
-    background: url("../img/ico-twitter-light.svg") no-repeat;
+    background: url("../img/instagram.svg") no-repeat;
     transition: all .25s ease-in-out;
+    margin-right: 30px;
+}
+
+.email-btn {
+    position: relative;
+    width: 35px !important;
+    height: 35px;
+    z-index: 20;
+    background: url("../img/email.svg") no-repeat;
+    transition: all .25s ease-in-out;
+    margin-right: 30px;
 }
 
 #copyright {
