--- a/Katie_Portfolio/css/styles.css
+++ b/Katie_Portfolio/css/styles.css
@@ -100,7 +100,7 @@ h4 {
 
 p {
     line-height: 1.5;
-    opacity: .7;
+    opacity: 1;
     font-weight: 300;
     margin-bottom: 15px;
     color: #F2F4F9;
